--- a/hw1/02-palindrome.html
+++ b/hw1/02-palindrome.html
@@ -9,17 +9,17 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" />
     <script defer src="02-palindrome.js"></script>
   </head>
-  <body>
-    <main>
-      <section>
+  <body class="d-flex col-12 bg-primary mt-4 justify-content-center">
+    <main class="co1-12 bg-light rounded m-4">
+      <section class="col-12 justify-content-center p-3">
         <h1>Exercise 02 - Palindrome</h1>
-        <div>
-          <label>Enter a positive number:</label>
-          <input type="number" />
+        <div class="mt-4">
+          <label for="palindrome">Enter a positive number:</label>
+          <input type="number" id="palindrome"  />
         </div>
-        <div>
+        <div class="mt-4">
           <p>Is this a palindrome?</p>
-          <div></div>
+          <div id="result"></div>
         </div>
       </section>
     </main>
