--- a/hw2/04-background.html
+++ b/hw2/04-background.html
@@ -9,8 +9,8 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" />
     <script defer src="04-background.js"></script>
   </head>
-  <body>
-    <main>
+  <body class="d-flex p-2 align-items-center justify-content-center vh-100">
+    <main class="container rounded bg-light p-4 col-6 vh-50">
       <h1>Exercise 04 - Background</h1>
       <p>
         The background color will change every few seconds (as indicated below).
@@ -22,7 +22,7 @@
         <input />
       </div>
       <div>
-        <input />
+        <button type="button" class="btn btn-primary">Start</button>
       </div>
     </main>
   </body>
