--- a/hw2/03-count.html
+++ b/hw2/03-count.html
@@ -9,7 +9,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" />
     <script defer src="03-count.js"></script>
   </head>
-  <body class="d-flex bg-primary p-2 align-items-center justify-content-center vh-100">
+  <body class="d-flex p-2 align-items-center justify-content-center vh-100">
     <main class="container rounded bg-white p-4 col-6 vh-50">
       <h1 class="text-center">Exercise 03 - Count</h1>
       <hr />
