--- a/hw2/04-background.html
+++ b/hw2/04-background.html
@@ -9,8 +9,8 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" />
     <script defer src="04-background.js"></script>
   </head>
-  <body class="d-flex p-2 align-items-center justify-content-center vh-100">
-    <main class="container rounded bg-light p-4 col-6 vh-50">
+  <body class="d-flex p-2 justify-content-center" >
+    <main class="container mt-4 rounded bg-light p-4 col-6 vh-50 col-7">
       <h1>Exercise 04 - Background</h1>
       <p>
         The background color will change every few seconds (as indicated below).
