Wrapped up form exercise

--- a/hw2/03-count.html
+++ b/hw2/03-count.html
@@ -14,8 +14,8 @@
       <h1 class="text-center">Exercise 03 - Count</h1>
       <hr />
       <div>
-        <label>Highlight all occurences of a word:</label>
-        <input />
+        <label for="highlightInput">Highlight all occurences of a word:</label>
+        <input name="highlightInput" id="highlightInput"/>
       </div>
       <hr />
       <div id="content">
