--- a/hw2/04-background.html
+++ b/hw2/04-background.html
@@ -18,11 +18,11 @@
         background color changes.
       </p>
       <div>
-        <label>Background change interval (seconds): </label>
-        <input />
+        <label for="intervalInput">Background change interval (seconds): </label>
+        <input name="interval" id="intervalInput"/>
       </div>
       <div>
-        <button type="button" class="btn btn-primary">Start</button>
+        <button type="button" class="btn btn-primary mt-3">Start</button>
       </div>
     </main>
   </body>
