--- a/hw2/04-background.html
+++ b/hw2/04-background.html
@@ -9,17 +9,17 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" />
     <script defer src="04-background.js"></script>
   </head>
-  <body class="d-flex p-2 justify-content-center" >
-    <main class="container mt-4 rounded bg-light p-4 col-6 vh-50 col-7">
+  <body class="d-flex p-4 justify-content-center" >
+    <main class="container mt-4 rounded bg-light p-4 vh-50 col-lg-7 col-md-8 col-sm-6">
       <h1>Exercise 04 - Background</h1>
       <p>
         The background color will change every few seconds (as indicated below).
         You can stop this behavior and you can also change how often the
         background color changes.
       </p>
-      <div>
-        <label for="intervalInput">Background change interval (seconds): </label>
-        <input name="interval" id="intervalInput"/>
+      <div class=" col-lg-6 col-md-7 col-sm-8">
+        <label for="intervalInput" class="col-12">Background change interval (seconds): </label>
+        <input name="intervalInput" id="intervalInput" class="col-lg-10 col-md-10 col-sm-10"/>
       </div>
       <div>
         <button type="button" class="btn btn-primary mt-3">Start</button>
