add background color change on page load

--- a/hw2/04-background.html
+++ b/hw2/04-background.html
@@ -22,7 +22,7 @@
         <input name="intervalInput" id="intervalInput" class="col-lg-10 col-md-10 col-sm-10"/>
       </div>
       <div>
-        <button type="button" class="btn btn-primary mt-3">Start</button>
+        <button type="button" class="btn btn-danger mt-3">Stop</button>
       </div>
     </main>
   </body>
