improvements based on PR feedback

--- a/hw2/05-form.html
+++ b/hw2/05-form.html
@@ -31,7 +31,7 @@
           <div class="dropdown mx-2 mb-4">
             <label for="registration" class="col-md-6 m-2 fw-bold">Registration Status:</label>
             <select name="registration" id="registration" name="registration" class="form-select">
-              <option value="selection" selected="true" disabled="true">Choose an Option</option>
+              <option value="No selection" selected="true" disabled="true">Choose an Option</option>
               <option value="registered">Registered</option>
               <option value="not registered">Not Registered</option>
             </select>
