--- a/hw3/02-charts.html
+++ b/hw3/02-charts.html
@@ -12,7 +12,7 @@
     <script defer src="02-charts.js"></script>
   </head>
   <body>
-    <main>
+    <main class="bg-primary">
       <h1>Exercise 02 - Charts</h1>
       <canvas class="donut-chart" aria-label="donut chart" role="img"></canvas>
     </main>
