--- a/hw3/02-charts.html
+++ b/hw3/02-charts.html
@@ -12,9 +12,12 @@
     <script defer src="02-charts.js"></script>
   </head>
   <body>
-    <main class="bg-primary">
+    <main>
       <h1>Exercise 02 - Charts</h1>
-      <canvas class="donut-chart" aria-label="donut chart" role="img"></canvas>
+      <div class="d-flex justify-content-center w-75 container bg-white rounded p-4" id="canvas-div">
+        <canvas class="donut-chart h-auto" aria-label="donut chart" role="img" width="100px"></canvas>
+      </div>
     </main>
   </body>
 </html>
+
