--- a/hw3/01-characters.html
+++ b/hw3/01-characters.html
@@ -11,7 +11,7 @@
     <script defer src="01-characters.js"></script>
   </head>
   <body>
-    <main>
+    <main class="container p-4">
       <h1>Exercise 01 - Characters</h1>
       <section></section>
     </main>
